--- a/src/main/resources/templates/cuentas.html
+++ b/src/main/resources/templates/cuentas.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script th:src="@{/styles/tailwind.js}"></script>
+	<link rel="shortcut icon" href="https://flowbite.com/docs/images/logo.svg" type="svg/x-icon">
 	<title>Dashboard</title>
 </head>
 
@@ -18,7 +19,6 @@
 			</a>
 			<div class="flex md:order-2">
 				<form action="logout" method="post">
-					<input id="token" type="hidden" th:name="token" th:value="${token}">
 					<button id="logout" type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0">Cerrar sesión</button>
 				</form>
 			</div>
@@ -35,14 +35,14 @@
 
 	<h1 class="mb-4 mt-32 text-center text-2xl font-bold tracking-tight leading-none text-gray-900">Mis cuentas</h1>
 
-	<div class="mt-12 w-3/4 mx-auto flex gap-7 items-center">
+	<div class="mt-12 w-5/6 mx-auto flex gap-7 items-center">
 		<div th:each="cuenta : ${cuentas}" class="w-96 h-56 m-auto bg-red-100 rounded-xl text-white shadow-2xl transition-transform transform hover:scale-110">    
 			<img class="object-cover w-full h-full rounded-xl" src="https://i.imgur.com/kGkSg1v.png">
 			<div class="w-full px-8 absolute top-8">
 				<div class="flex justify-between">
 					<div>
 						<p class="font-light">Nombre</p>
-						<p class="font-medium tracking-widest" th:text="|${cliente.nombre} ${cliente.apellido}|"></p>
+						<p class="font-medium tracking-widest" th:text="|${session.cliente.nombre} ${session.cliente.apellido}|"></p>
 					</div>
 					<img class="w-14 h-14" src="https://i.imgur.com/bbPHJVe.png"/>
 				</div>
@@ -75,22 +75,6 @@
 		<span class="self-center text-xl font-semibold whitespace-nowrap">BankSpring</span>
 		<p>¡Siempre contigo!</p>
 	</div>
-
-	<script>
-		let token = localStorage.getItem("token");
-
-		if (!token) {
-			token = "[[${token}]]";
-	
-			localStorage.setItem("token", token);
-		}
-
-		document.querySelector("#token").value = token;
-
-		document.querySelector("#logout").onclick = () => {
-			localStorage.removeItem("token");
-		}
-	</script>
 </body>
 
 </html>
