--- a/src/main/resources/templates/cuentas.html
+++ b/src/main/resources/templates/cuentas.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script th:src="@{/styles/tailwind.js}"></script>
-	<link rel="shortcut icon" href="https://flowbite.com/docs/images/logo.svg" type="svg/x-icon">
+	<link rel="shortcut icon" th:href="@{/logo.svg}" type="svg/x-icon">
 	<title>Dashboard</title>
 </head>
 
