--- a/src/main/resources/templates/movimientos.html
+++ b/src/main/resources/templates/movimientos.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script th:src="@{/styles/tailwind.js}"></script>
-	<link rel="shortcut icon" href="https://flowbite.com/docs/images/logo.svg" type="svg/x-icon">
+	<link rel="shortcut icon" th:href="@{/logo.svg}" type="svg/x-icon">
 	<title>Movimientos</title>
 </head>
 
@@ -38,7 +38,7 @@
 	<div class="mt-12 w-4/6 mx-auto flex gap-7 items-center">
 		<div class="overflow-x-auto mx-auto w-full">
 			<p class="text-center" th:if="${movimientos.size() == 0}">No existen movimientos para este cliente.<p/>
-			<table th:if="${movimientos.size() != 0}" class="w-full text-sm text-left text-gray-500">
+			<table th:if="${movimientos.size() != 0}" class="w-full text-sm text-left text-gray-500 h-[300px] overflow-y-auto">
 				<thead class="text-xs text-gray-700 uppercase bg-gray-50">
 					<tr>
 						<th class="py-3 px-6">Cuenta</th>
@@ -62,7 +62,6 @@
 	<div class="w-full flex flex-col justify-center items-center gap-2 mt-20">
 		<img src="https://flowbite.com/docs/images/logo.svg" class="h-6 mr-3 sm:h-9" alt="Logo">
 		<span class="self-center text-xl font-semibold whitespace-nowrap">BankSpring</span>
-		<p>¡Siempre contigo!</p>
 	</div>
 </body>
 
