--- a/src/main/resources/templates/transacciones.html
+++ b/src/main/resources/templates/transacciones.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script th:src="@{/styles/tailwind.js}"></script>
-	<link rel="shortcut icon" href="https://flowbite.com/docs/images/logo.svg" type="svg/x-icon">
+	<link rel="shortcut icon" th:href="@{/logo.svg}" type="svg/x-icon">
 	<title>Transacciones</title>
 </head>
 
@@ -34,16 +34,68 @@
 	</nav>
 
 	<h1 class="mb-4 mt-32 text-center text-2xl font-bold tracking-tight leading-none text-gray-900">Mis transacciones</h1>
+	
+	<div id="messages" class="w-3/4 mx-auto mt-12"></div>
 
-	<div class="mt-12 w-5/6 mx-auto flex gap-7 items-center">
-
+	<div id="content" class="mt-12 w-3/4 mx-auto flex flex-col gap-7 items-center">
+		<div class="mx-auto w-3/4">
+			<label for="operacion" class="block mb-2 text-sm font-medium text-gray-900">Seleccione la operación que desea realizar</label>
+			<select id="operacion" name="operacion" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" required>
+				<option selected>Seleccione una operación</option>
+				<option value="Deposito">Deposito</option>
+				<option value="Retiro">Retiro</option>
+			</select>
+		</div>
+		<form id="transaccion" method="post" class="mx-auto w-3/4">
+			<div class="mb-6">
+				<label for="numeroDeCuenta" class="block mb-2 text-sm font-medium text-gray-900">Seleccione la cuenta</label>
+				<select id="numeroDeCuenta" name="numeroDeCuenta" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" required>
+					<option selected disabled value="">Seleccione una cuenta</option>
+					<option th:each="cuenta : ${cuentas}" th:value="${cuenta.numeroDeCuenta}" th:text="|${cuenta.numeroDeCuenta} - Saldo disponible $${cuenta.saldo}|"></option>
+				</select>
+			</div>
+			<div class="mb-6">
+				<label for="monto" class="block mb-2 text-sm font-medium text-gray-900">Monto</label>
+				<input type="number" id="monto" step="0.1" name="monto" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="$0.0" required>
+			</div>
+			<button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center">Realizar transacción</button>
+		</form>
 	</div>
 
-	<div class="w-full flex flex-col justify-center items-center gap-2 mt-20">
+	<div class="w-full flex flex-col justify-center items-center gap-2 mt-10">
 		<img src="https://flowbite.com/docs/images/logo.svg" class="h-6 mr-3 sm:h-9" alt="Logo">
 		<span class="self-center text-xl font-semibold whitespace-nowrap">BankSpring</span>
 		<p>¡Siempre contigo!</p>
 	</div>
+
+	<script>	
+		const operacion = document.querySelector("#operacion");
+		const transaccion = document.querySelector("#transaccion");
+		const messagesContainer = document.querySelector("#messages");
+
+		operacion.onchange = (event) => {
+			event.target.value === "Deposito" ? 
+				transaccion.action = "deposito" : 
+				transaccion.action = "retiro";
+		}
+
+		transaccion.onsubmit = (event) => {
+			event.preventDefault();
+
+			if (operacion.value === "Seleccione una operación") {
+				messagesContainer.innerHTML += `
+					<div class="w-3/4 mx-auto p-4 mb-2 text-sm text-red-700 bg-red-100 rounded-lg mb-10">
+						<span class="font-medium">El campo de tipo de operación es obligatorio.</span>
+					</div>
+				`;
+
+				setTimeout(() => {
+					messagesContainer.innerHTML = ``;
+				}, 3000);
+			}
+		}
+
+	</script>
 </body>
 
 </html>
