--- a/src/main/resources/templates/transferencias.html
+++ b/src/main/resources/templates/transferencias.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script th:src="@{/styles/tailwind.js}"></script>
-	<link rel="shortcut icon" href="https://flowbite.com/docs/images/logo.svg" type="svg/x-icon">
+	<link rel="shortcut icon" th:href="@{/logo.svg}" type="svg/x-icon">
 	<title>Transferencias</title>
 </head>
 
@@ -35,14 +35,34 @@
 
 	<h1 class="mb-4 mt-32 text-center text-2xl font-bold tracking-tight leading-none text-gray-900">Mis transferencias</h1>
 
-	<div class="mt-12 w-5/6 mx-auto flex gap-7 items-center">
-
+	<div class="mt-12 w-3/4 mx-auto flex gap-7 items-center">
+		<form id="transaccion" method="post" action="transferencia" class="mx-auto w-3/4">
+			<div class="mb-6">
+				<label for="numeroDeCuenta" class="block mb-2 text-sm font-medium text-gray-900">Seleccione la cuenta</label>
+				<select id="numeroDeCuenta" name="numeroDeCuenta" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" required>
+					<option selected disabled value="">Seleccione una cuenta</option>
+					<option th:each="cuenta : ${cuentas}" th:value="${cuenta.numeroDeCuenta}" th:text="|${cuenta.numeroDeCuenta} - Saldo disponible $${cuenta.saldo}|"></option>
+				</select>
+			</div>
+			<div class="mb-6">
+				<label for="destino" class="block mb-2 text-sm font-medium text-gray-900">Cuenta destino</label>
+				<input type="text" id="destino" name="destino" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" maxlength="9" placeholder="000000000" required>
+			</div>
+			<div class="mb-6">
+				<label for="monto" class="block mb-2 text-sm font-medium text-gray-900">Monto</label>
+				<input type="number" id="monto" step="0.1" name="monto" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="$0.0" required>
+			</div>
+			<div class="mb-6">
+				<label for="concepto" class="block mb-2 text-sm font-medium text-gray-900">Concepto</label>
+				<input type="text" id="concepto" step="0.1" name="concepto" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="Transferencia por..." required>
+			</div>
+			<button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center">Enviar transferencia</button>
+		</form>
 	</div>
 
-	<div class="w-full flex flex-col justify-center items-center gap-2 mt-20">
+	<div class="w-full flex flex-col justify-center items-center gap-2 mt-5">
 		<img src="https://flowbite.com/docs/images/logo.svg" class="h-6 mr-3 sm:h-9" alt="Logo">
 		<span class="self-center text-xl font-semibold whitespace-nowrap">BankSpring</span>
-		<p>¡Siempre contigo!</p>
 	</div>
 </body>
 
