--- a/src/main/resources/templates/transacciones.html
+++ b/src/main/resources/templates/transacciones.html
@@ -58,7 +58,7 @@
 				<label for="monto" class="block mb-2 text-sm font-medium text-gray-900">Monto</label>
 				<input type="number" id="monto" step="0.1" name="monto" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" placeholder="$0.0" required>
 			</div>
-			<button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center">Realizar transacción</button>
+			<input type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center" value="Realizar transacción" />
 		</form>
 	</div>
 
@@ -75,8 +75,8 @@
 
 		operacion.onchange = (event) => {
 			event.target.value === "Deposito" ? 
-				transaccion.action = "deposito" : 
-				transaccion.action = "retiro";
+				transaccion.action = "/deposito" : 
+				transaccion.action = "/retiro";
 		}
 
 		transaccion.onsubmit = (event) => {
@@ -92,6 +92,8 @@
 				setTimeout(() => {
 					messagesContainer.innerHTML = ``;
 				}, 3000);
+			} else {
+				transaccion.submit();
 			}
 		}
 
